hphp/test/zend/good/ext/standard/tests/file/filetype_variation3.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip no /dev on Windows');
}
if (!file_exists("/dev/ram0")) {
    die('skip /dev/ram0 not available');
}
?>