hphp/test/zend/bad/ext/standard/tests/file/filetype_variation2.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip no /dev on Windows');
}
if (!file_exists("/dev/console")) {
    die('skip /dev/console not available');
}    
?>